--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
