--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "plugins": ["import", "unused-imports", "react", "jsx-a11y"],
-  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-uses-react": "off",
